--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -1,12 +1,12 @@
 ---
-# Deployment of our keptn-service-template-go
+# Deployment of our datadog-service
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: keptn-service-template-go
+  name: datadog-service
   namespace: keptn
   labels:
-    app.kubernetes.io/name: keptn-service-template-go
+    app.kubernetes.io/name: datadog-service
     app.kubernetes.io/instance: keptn
     app.kubernetes.io/part-of: keptn-keptn
     app.kubernetes.io/component: control-plane
@@ -14,21 +14,21 @@ metadata:
 spec:
   selector:
     matchLabels:
-      run: keptn-service-template-go
+      run: datadog-service
   replicas: 1
   template:
     metadata:
       labels:
-        run: keptn-service-template-go
-        app.kubernetes.io/name: keptn-service-template-go
+        run: datadog-service
+        app.kubernetes.io/name: datadog-service
         app.kubernetes.io/instance: keptn
         app.kubernetes.io/part-of: keptn-keptn
         app.kubernetes.io/component: control-plane
         app.kubernetes.io/version: develop
     spec:
       containers:
-        - name: keptn-service-template-go
-          image: keptnsandbox/keptn-service-template-go:latest # Todo: Replace this with your image name
+        - name: datadog-service
+          image: vadasambar/datadog-service:latest # Todo: Replace this with your image name
           ports:
             - containerPort: 8080
           env:
@@ -92,18 +92,18 @@ spec:
                   fieldPath: spec.nodeName
       serviceAccountName: keptn-default
 ---
-# Expose keptn-service-template-go via Port 8080 within the cluster
+# Expose datadog-service via Port 8080 within the cluster
 apiVersion: v1
 kind: Service
 metadata:
-  name: keptn-service-template-go
+  name: datadog-service
   namespace: keptn
   labels:
-    run: keptn-service-template-go
+    run: datadog-service
 spec:
   ports:
     - port: 8080
       protocol: TCP
   selector:
-    run: keptn-service-template-go
+    run: datadog-service
 
