--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@
 version: '3.7'
 services:
   keptn-service:
-    container_name: 'keptn-service-template-go'
+    container_name: 'datadog-service'
     build: .
     depends_on:
       - 'distributor'
