--- a/helm/Chart.yaml
+++ b/helm/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 appVersion: 0.8.0
-description: Helm Chart for the keptn keptn-service-template-go
-name: keptn-service-template-go
+description: Helm Chart for the keptn datadog-service
+name: datadog-service
 type: application
 version: 0.8.0
