--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -1,17 +1,17 @@
 keptnservice:
   image:
-    repository: docker.io/keptnsandbox/keptn-service-template-go # Container Image Name
+    repository: ghcr.io/vadasambar/datadog-service # Container Image Name
     pullPolicy: Always                   # Kubernetes Image Pull Policy
     tag: "dev"                                    # Container Tag
   service:
-    enabled: true                              # Creates a Kubernetes Service for the keptn-service-template-go
+    enabled: true                              # Creates a Kubernetes Service for the datadog-service
 
 distributor:
   stageFilter: ""                            # Sets the stage this helm service belongs to
   serviceFilter: ""                          # Sets the service this helm service belongs to
   projectFilter: ""                          # Sets the project this helm service belongs to
   image:
-    repository: docker.io/keptn/distributor  # Container Image Name
+    repository: ghcr.io/keptn/distributor  # Container Image Name
     pullPolicy: IfNotPresent                 # Kubernetes Image Pull Policy
     tag: ""                                  # Container Tag
 
