--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,7 +2,7 @@ apiVersion: skaffold/v1beta13
 kind: Config
 build:
   artifacts:
-    - image: vadasambar/datadog-service # Todo: Replace this with your image name
+    - image: ghcr.io/vadasambar/datadog-service:dev # Todo: Replace this with your image name
       docker:
         dockerfile: Dockerfile
         buildArgs:
