--- a/deploy/service.yaml
+++ b/deploy/service.yaml
@@ -62,7 +62,7 @@ spec:
             - name: PUBSUB_URL
               value: 'nats://keptn-nats-cluster'
             - name: PUBSUB_TOPIC
-              value: 'sh.keptn.>'
+              value: 'sh.keptn.event.evaluation.triggered'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
             - name: VERSION
