fix: use `github.actor` and `github.token` for ghcr auth

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -150,8 +150,8 @@ jobs:
         # that's fine, but it means we can't push images to dockerhub
         uses: docker/login-action@v1.10.0
         with:
-          username: ${{ secrets.REGISTRY_USER }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          username: ${{ github.actor }}
+          password: ${{ github.token }}
 
       - id: docker_build
         name: Docker Build
