--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -150,6 +150,7 @@ jobs:
         # that's fine, but it means we can't push images to dockerhub
         uses: docker/login-action@v1.10.0
         with:
+          registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ github.token }}
 
