--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "keptn-service.serviceAccountName" . }}
+  name: {{ include "datadog-service.serviceAccountName" . }}
   labels:
-    {{- include "keptn-service.labels" . | nindent 4 }}
+    {{- include "datadog-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
   {{- toYaml . | nindent 4 }}
@@ -13,16 +13,16 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: keptn-{{ .Release.Namespace }}-keptn-service-cluster-admin
+  name: keptn-{{ .Release.Namespace }}-datadog-service-cluster-admin
   labels:
-    {{- include "keptn-service.labels" . | nindent 4 }}
+    {{- include "datadog-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
   {{- toYaml . | nindent 4 }}
   {{- end }}
 subjects:
   - kind: ServiceAccount
-    name: {{ include "keptn-service.serviceAccountName" . }}
+    name: {{ include "datadog-service.serviceAccountName" . }}
     namespace: {{ .Release.Namespace }}
 roleRef:
   kind: ClusterRole
