--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "datadog-service.fullname" . }}
+  namespace: {{ .Values.namespace | default .Release.Namespace }}
   labels:
     {{- include "datadog-service.labels" . | nindent 4 }}
 spec:
