--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "datadog-service.serviceAccountName" . }}
+  namespace: {{ .Values.namespace | default .Release.Namespace }}
   labels:
     {{- include "datadog-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
@@ -14,6 +15,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: keptn-{{ .Release.Namespace }}-datadog-service-cluster-admin
+  namespace: {{ .Values.namespace | default .Release.Namespace }}
   labels:
     {{- include "datadog-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
