fix: add support for setting timeout through env variable - bump image tag to 0.2.0 - add sample sli and slo - use podtatohead for test events

--- a/helm/templates/secret.yaml
+++ b/helm/templates/secret.yaml
@@ -9,7 +9,7 @@ metadata:
 type: Opaque
 data:
   DD_API_KEY: {{ required "A valid DD_API_KEY is required to connect to the Datadog API" .Values.datadogservice.ddApikey | b64enc | quote }}
-  DD_APP_KEY: {{ required "A valid DD_API_KEY is required to connect to the Datadog API" .Values.datadogservice.ddAppKey | b64enc | quote }}
-  DD_SITE: {{ required "A valid DD_API_KEY is required to connect to the Datadog API" .Values.datadogservice.ddSite | b64enc | quote }}
+  DD_APP_KEY: {{ required "A valid DD_APP_KEY is required to connect to the Datadog API" .Values.datadogservice.ddAppKey | b64enc | quote }}
+  DD_SITE: {{ required "A valid DD_SITE is required to connect to the Datadog API" .Values.datadogservice.ddSite | b64enc | quote }}
 
 {{- end -}}
