fix: service name in docker compose `keptn-service` -> `datadog-service`

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 
 version: '3.7'
 services:
-  keptn-service:
+  datadog-service:
     container_name: 'datadog-service'
     build: .
     depends_on:
