--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -71,7 +71,7 @@ spec:
               cpu: "500m"
           env:
             - name: PUBSUB_TOPIC
-              value: 'sh.keptn.event.get-sli.triggered'
+              value: 'sh.keptn.event.monitoring.configure,sh.keptn.event.configure-monitoring.triggered,sh.keptn.event.get-sli.triggered'
             - name: PUBSUB_RECIPIENT
               value: '127.0.0.1'
             - name: STAGE_FILTER
