--- a/examples/quickstart/sli.yaml
+++ b/examples/quickstart/sli.yaml
@@ -1,4 +1,4 @@
 ---
 spec_version: '1.0'
 indicators:
-  system_load: avg:system.load.1{*}.rollup(avg, $DURATION)
+  http_response_time: avg:network.http.response_time{*} by {$SERVICE}.rollup(avg, $DURATION)
