--- a/examples/quickstart/shipyard.yaml
+++ b/examples/quickstart/shipyard.yaml
@@ -1,7 +1,7 @@
 apiVersion: "spec.keptn.sh/0.2.0"
 kind: "Shipyard"
 metadata:
-  name: "shipyard-sockshop"
+  name: "shipyard-podtatohead"
 spec:
   stages:
     - name: "hardening"
