--- a/examples/quickstart/slo.yaml
+++ b/examples/quickstart/slo.yaml
@@ -9,7 +9,7 @@ objectives:
     displayName: "HTTP response time"
     pass:
       - criteria:
-          - "<0.004"
+          - "<0.004" # 4 milliseconds
     warning:
       - criteria:
           - ">=0.004"
