test: add on:push to run the the integration tests workflow for the first time
Signed-off-by: Suraj Banakar <surajrbanakar@gmail.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -1,10 +1,11 @@
 name: Integration Tests
 on:
-  schedule:
-    # * is a special character in YAML, so you have to quote this string
-    - cron: "0 3 * * 1-5" # run integration tests at 3 AM, monday to friday (1-5)
+  # schedule:
+  #   # * is a special character in YAML, so you have to quote this string
+  #   - cron: "0 3 * * 1-5" # run integration tests at 3 AM, monday to friday (1-5)
 
   workflow_dispatch: # run integration tests only when triggered manually
+  push: feat/47/add-tests
 
 defaults:
   run:
