--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -5,7 +5,9 @@ on:
   #   - cron: "0 3 * * 1-5" # run integration tests at 3 AM, monday to friday (1-5)
 
   workflow_dispatch: # run integration tests only when triggered manually
-  push: feat/47/add-tests
+  push: 
+    branches:
+    - feat/47/add-tests
 
 defaults:
   run:
