fix(actions/integration-tests): add virtualbox repo to apt-get
Signed-off-by: Suraj Banakar <surajrbanakar@gmail.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -54,6 +54,7 @@ jobs:
       # Prepare minikube + Keptn environment
       - name: Install and start minikube
         run: |
+          deb [arch=amd64 signed-by=/usr/share/keyrings/oracle-virtualbox-2016.gpg] https://download.virtualbox.org/virtualbox/debian focal contrib
           wget -O- https://www.virtualbox.org/download/oracle_vbox_2016.asc | sudo gpg --dearmor --yes --output /usr/share/keyrings/oracle-virtualbox-2016.gpg
           sudo apt-get update
           sudo apt-get install virtualbox-6.1 -y 
