fix(actions/integration-tests): fix virtualbox installation erroring out
Signed-off-by: Suraj Banakar <surajrbanakar@gmail.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -54,8 +54,10 @@ jobs:
       # Prepare minikube + Keptn environment
       - name: Install and start minikube
         run: |
-          deb [arch=amd64 signed-by=/usr/share/keyrings/oracle-virtualbox-2016.gpg] https://download.virtualbox.org/virtualbox/debian focal contrib
-          wget -O- https://www.virtualbox.org/download/oracle_vbox_2016.asc | sudo gpg --dearmor --yes --output /usr/share/keyrings/oracle-virtualbox-2016.gpg
+          wget -q https://www.virtualbox.org/download/oracle_vbox_2016.asc -O- | sudo apt-key add -
+          wget -q https://www.virtualbox.org/download/oracle_vbox.asc -O- | sudo apt-key add -
+          echo "deb [arch=amd64] http://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib" | \
+     sudo tee -a /etc/apt/sources.list.d/virtualbox.list
           sudo apt-get update
           sudo apt-get install virtualbox-6.1 -y 
           minikube start --cpus='4' --memory='10g' --driver=virtualbox
