--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -56,8 +56,7 @@ jobs:
         run: |
           wget -q https://www.virtualbox.org/download/oracle_vbox_2016.asc -O- | sudo apt-key add -
           wget -q https://www.virtualbox.org/download/oracle_vbox.asc -O- | sudo apt-key add -
-          echo "deb [arch=amd64] http://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib" | \
-     sudo tee -a /etc/apt/sources.list.d/virtualbox.list
+          echo "deb [arch=amd64] http://download.virtualbox.org/virtualbox/debian $(lsb_release -cs) contrib" | sudo tee -a /etc/apt/sources.list.d/virtualbox.list
           sudo apt-get update
           sudo apt-get install virtualbox-6.1 -y 
           minikube start --cpus='4' --memory='10g' --driver=virtualbox
