--- a/helm/templates/deployment.yaml
+++ b/helm/templates/deployment.yaml
@@ -47,6 +47,8 @@ spec:
             value: "http://localhost:8081/configuration-service"
           - name: env
             value: 'production'
+          - name: SLEEP_BEFORE_API_IN_SECONDS
+            value: "{{ .Values.datadogservice.sleepBeforeAPIInSeconds }}"
           - name: LOG_LEVEL
             value: "{{ .Values.datadogservice.logLevel }}"
           resources:
