fix(tests): remove redundant chart values
Signed-off-by: Suraj Banakar <surajrbanakar@gmail.com>

--- a/.github/workflows/integration-tests.yaml
+++ b/.github/workflows/integration-tests.yaml
@@ -64,6 +64,7 @@ jobs:
           sudo install minikube-linux-amd64 /usr/local/bin/minikube
           # /usr/local/bin/minikube start --driver=virtualbox
           /usr/local/bin/minikube start --cpus=2 --memory=5GB
+          /usr/local/bin/minikube minikube addons enable metrics-server
 
       # - name: Wait for minikube to become ready
       #   timeout-minutes: 1
@@ -142,25 +143,6 @@ jobs:
                 type: LoadBalancer
               features:
                 automaticProvisioningURL: http://keptn-gitea-provisioner-service.default
-            # # Not required for tests
-            # statisticsService:
-            #   enabled: false
-            # approvalService:
-            #   enabled: false
-            # webhookService:
-            #   enabled: false
-            # remediationService:
-            #   enabled: false
-            # # Trim down memory and cpu required
-            # mongo:
-            #   resources:
-            #     requests:
-            #       cpu: 50m
-            #       memory: 50Mi
-            # nats:
-            #   nats:
-            #     resources:
-            #       requests:
 
           KUBECONFIG: ${{ env.KUBECONFIG }}
 
