fix(test): increase test slo and wait time for tests - add 3m wait before evaluating slo - increase evaluation time frame to 2m
Signed-off-by: Suraj Banakar <surajrbanakar@gmail.com>

--- a/test/data/podtatohead.slo.yaml
+++ b/test/data/podtatohead.slo.yaml
@@ -9,15 +9,10 @@ objectives:
     displayName: "HTTP response time"
     pass:
       - criteria:
-          - "<0.02" # 20 milliseconds
-    warning:
-      - criteria:
-          - ">=0.2"
-          - "<0.3"
+          - "<0.1" # seconds
     fail:
       - criteria:
-          - ">=0.3"
+          - ">=0.1"
 
 total_score:
   pass: "100%"
-  warning: "50%"
